--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,9 @@
     "lodash": "~2.4.1",
     "jquery": "~2.0.3",
     "requirejs-text": "~2.0.9",
+    "requirejs-plugins": "~1.0.2",
     "handlebars": "~1.0.0",
-    "bootstrap": "~3.1.0"
+    "bootstrap": "~3.1.0",
+    "requirejs-plugins": "~1.0.2"
   }
 }
